@@ -17,6 +17,10 @@ my @tests = (
       expected => "view\n" },
     { path => '/full',
       expected => "start\nview\nstop\n" },
+    { path => '/layoutdisabled',
+      expected => "view\n" },
+    { path => '/layoutchanged',
+      expected => "customstart\nview\ncustomstop\n" },
 );
 
 plan tests => scalar(@tests);
@@ -31,6 +35,15 @@ SKIP: {
     get '/full' => sub {
         layout 'main';
         template 't03';
+    };
+
+    get '/layoutdisabled' => sub {
+        layout 'main';
+        template 't03', {}, { layout => undef };
+    };
+
+    get '/layoutchanged' => sub {
+        template 't03', {}, { layout => 'custom' };
     };
 
     foreach my $test (@tests) {
