@@ -1,0 +1,2 @@
+customstart
+<% content %>customstop
